app/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BLANK
    EACH
    MATH_OPER

Grammar

Rule 0     S' -> COMPLETE_IF_THEN2
Rule 1     COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN OTHERWISE PRINT_VAL
Rule 2     COMPLETE_IF_THEN -> IF_COMPARISON THEN PRINT_VAL
Rule 3     COMPLETE_IF_THEN -> IF_COMPARISON2 THEN PRINT_VAL
Rule 4     IF_COMPARISON -> IF COMPARISON
Rule 5     IF_COMPARISON2 -> IF2 COMPARISON
Rule 6     COMPARISON -> COMPARISON1
Rule 7     COMPARISON -> COMPARISON2
Rule 8     COMPARISON -> COMPARISON301
Rule 9     COMPARISON -> COMPARISON302
Rule 10    COMPARISON -> COMPARISON311
Rule 11    COMPARISON -> COMPARISON312
Rule 12    COMPARISON -> COMPARISON4
Rule 13    COMPARISON -> COMPARISON41
Rule 14    COMPARISON -> COMPARISON5
Rule 15    COMPARISON -> COMPARISON51
Rule 16    COMPARISON -> COMPARISON52
Rule 17    COMPARISON -> COMPARISON6
Rule 18    COMPARISON -> COMPARISON61
Rule 19    COMPARISON -> COMPARISON7
Rule 20    COMPARISON -> COMPARISON711
Rule 21    COMPARISON -> COMPARISON8
Rule 22    COMPARISON -> COMPARISON9
Rule 23    COMPARISON -> COMPARISON91
Rule 24    COMPARISON -> Q_COMPARISON_IS_QUAL
Rule 25    COMPARISON -> Q_COMPARISON_IS_EMPTY
Rule 26    COMPARISON -> Q_COMPARISON_CONTAINS_QUAL
Rule 27    COMPARISON301 -> COMPARISON AND COMPARISON
Rule 28    COMPARISON302 -> COMPARISON OR COMPARISON
Rule 29    COMPARISON311 -> LPAREN COMPARISON AND COMPARISON RPAREN
Rule 30    COMPARISON312 -> LPAREN COMPARISON OR COMPARISON RPAREN
Rule 31    COMPARISON1 -> THERE IS DATA FOR MEASUREMENT
Rule 32    COMPARISON2 -> NO DATA FOR MEASUREMENT
Rule 33    COMPARISON4 -> MEASUREMENT2 COMP NUMUM
Rule 34    COMPARISON4 -> MEASUREMENT2 COMP NUMNM
Rule 35    COMPARISON4 -> MEASUREMENT2 COMP NUM
Rule 36    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
Rule 37    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
Rule 38    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMUM
Rule 39    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
Rule 40    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
Rule 41    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUMNM
Rule 42    COMPARISON41 -> MEASUREMENT2 COMP NUMUM COMMA COMP NUM
Rule 43    COMPARISON41 -> MEASUREMENT2 COMP NUMNM COMMA COMP NUM
Rule 44    COMPARISON41 -> MEASUREMENT2 COMP NUM COMMA COMP NUM
Rule 45    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
Rule 46    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
Rule 47    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
Rule 48    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
Rule 49    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
Rule 50    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
Rule 51    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
Rule 52    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
Rule 53    COMPARISON711 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
Rule 54    COMPARISON7 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM
Rule 55    COMPARISON7 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM
Rule 56    COMPARISON7 -> VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM
Rule 57    COMPARISON8 -> VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
Rule 58    COMPARISON8 -> VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
Rule 59    COMPARISON8 -> VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUM
Rule 60    COMPARISON9 -> THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
Rule 61    COMPARISON91 -> THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
Rule 62    COMPARISON5 -> COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
Rule 63    COMPARISON51 -> VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
Rule 64    COMPARISON52 -> VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
Rule 65    COMPARISON6 -> NO DATA FOR ANY_OF_MEASUREMENT
Rule 66    COMPARISON61 -> NO DATA FOR EVERY_OF_MEASUREMENT
Rule 67    Q_COMPARISON_CONTAINS_QUAL -> QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
Rule 68    Q_COMPARISON_IS_QUAL -> QUALIFIER_FOR_MEASUREMENT_IS QUAL
Rule 69    Q_COMPARISON_IS_EMPTY -> QUALIFIER_FOR_MEASUREMENT_IS EMPTY
Rule 70    VALUE_FOR_EVERY_OF_MEASUREMENT -> VALUE FOR EVERY_OF_MEASUREMENT IS
Rule 71    VALUE_FOR_ANY_OF_MEASUREMENT -> VALUE FOR ANY_OF_MEASUREMENT IS
Rule 72    QUALIFIER_FOR_MEASUREMENT_IS -> QUALIFIER FOR MEASUREMENT IS
Rule 73    QUALIFIER_FOR_MEASUREMENT_CONTAINS -> QUALIFIER FOR MEASUREMENT CONTAINS
Rule 74    MEASUREMENT2 -> VALUE FOR MEASUREMENT IS
Rule 75    ANY_OF_MEASUREMENT -> ANY OF MEASUREMENT
Rule 76    EVERY_OF_MEASUREMENT -> EVERY OF MEASUREMENT
Rule 77    MEASUREMENT -> ID TEST
Rule 78    MEASUREMENT -> ID CRITICAL_BREAKDOWN
Rule 79    IF2 -> COMPLETE_IF_THEN OTHERWISE IF
Rule 80    QUAL -> AR
Rule 81    QUAL -> BR
Rule 82    QUAL -> CL
Rule 83    QUAL -> BL
Rule 84    QUAL -> GI

Terminals, with rules where they appear

AND                  : 27 29 60 61
ANY                  : 75
AR                   : 80
AT                   : 62 63 64
BETWEEN              : 60 61
BL                   : 83
BLANK                : 
BR                   : 81
CL                   : 82
COMMA                : 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
COMP                 : 33 34 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 55 56 57 58 59
COMPONENT            : 62
CONTAINS             : 73
CRITICAL_BREAKDOWN   : 78
DATA                 : 31 32 65 66
DIFFERENCE           : 60 61
EACH                 : 
EMPTY                : 69
EVERY                : 76
FOLD                 : 60 61
FOR                  : 31 32 63 63 64 64 65 66 70 71 72 73 74
GI                   : 84
ID                   : 77 78
IF                   : 4 79
IN                   : 60 60 61 61 62
IS                   : 31 60 61 62 63 64 70 71 72 74
LEAST                : 62 63 64
LESS                 : 60 62 63
LPAREN               : 29 30
MATH_OPER            : 
MORE                 : 61 64
NO                   : 32 65 66
NUM                  : 35 38 41 42 43 44 44 47 48 49 50 50 53 56 59 60 61
NUMNM                : 34 37 39 40 40 41 43 45 46 46 47 49 52 54 58
NUMUM                : 33 36 36 37 38 39 42 45 48 51 51 52 53 55 57
NUM_FOLD             : 62 63 64
OF                   : 75 76
OR                   : 28 30
OTHERWISE            : 1 79
POWERFUL             : 62 63 64
PRINT_VAL            : 1 2 3
QUALIFIER            : 72 73
RPAREN               : 29 30
TEST                 : 77
THAN                 : 60 61 63 64
THE                  : 62
THEN                 : 2 3
THERE                : 31 60 61
VALUE                : 60 60 61 61 63 63 64 64 70 71 74
error                : 

Nonterminals, with rules where they appear

ANY_OF_MEASUREMENT   : 65 71
COMPARISON           : 4 5 27 27 28 28 29 29 30 30
COMPARISON1          : 6
COMPARISON2          : 7
COMPARISON301        : 8
COMPARISON302        : 9
COMPARISON311        : 10
COMPARISON312        : 11
COMPARISON4          : 12
COMPARISON41         : 13
COMPARISON5          : 14
COMPARISON51         : 15
COMPARISON52         : 16
COMPARISON6          : 17
COMPARISON61         : 18
COMPARISON7          : 19
COMPARISON711        : 20
COMPARISON8          : 21
COMPARISON9          : 22
COMPARISON91         : 23
COMPLETE_IF_THEN     : 1 79
COMPLETE_IF_THEN2    : 0
EVERY_OF_MEASUREMENT : 66 70
IF2                  : 5
IF_COMPARISON        : 2
IF_COMPARISON2       : 3
MEASUREMENT          : 31 32 60 60 61 61 62 63 63 64 64 72 73 74 75 76
MEASUREMENT2         : 33 34 35 36 37 38 39 40 41 42 43 44
QUAL                 : 67 68
QUALIFIER_FOR_MEASUREMENT_CONTAINS : 67
QUALIFIER_FOR_MEASUREMENT_IS : 68 69
Q_COMPARISON_CONTAINS_QUAL : 26
Q_COMPARISON_IS_EMPTY : 25
Q_COMPARISON_IS_QUAL : 24
VALUE_FOR_ANY_OF_MEASUREMENT : 45 46 47 48 49 50 51 52 53 54 55 56
VALUE_FOR_EVERY_OF_MEASUREMENT : 57 58 59

Parsing method: LALR

state 0

    (0) S' -> . COMPLETE_IF_THEN2
    (1) COMPLETE_IF_THEN2 -> . COMPLETE_IF_THEN OTHERWISE PRINT_VAL
    (2) COMPLETE_IF_THEN -> . IF_COMPARISON THEN PRINT_VAL
    (3) COMPLETE_IF_THEN -> . IF_COMPARISON2 THEN PRINT_VAL
    (4) IF_COMPARISON -> . IF COMPARISON
    (5) IF_COMPARISON2 -> . IF2 COMPARISON
    (79) IF2 -> . COMPLETE_IF_THEN OTHERWISE IF

    IF              shift and go to state 5

    COMPLETE_IF_THEN2              shift and go to state 1
    COMPLETE_IF_THEN               shift and go to state 2
    IF_COMPARISON                  shift and go to state 3
    IF_COMPARISON2                 shift and go to state 4
    IF2                            shift and go to state 6

state 1

    (0) S' -> COMPLETE_IF_THEN2 .



state 2

    (1) COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN . OTHERWISE PRINT_VAL
    (79) IF2 -> COMPLETE_IF_THEN . OTHERWISE IF

    OTHERWISE       shift and go to state 7


state 3

    (2) COMPLETE_IF_THEN -> IF_COMPARISON . THEN PRINT_VAL

    THEN            shift and go to state 8


state 4

    (3) COMPLETE_IF_THEN -> IF_COMPARISON2 . THEN PRINT_VAL

    THEN            shift and go to state 9


state 5

    (4) IF_COMPARISON -> IF . COMPARISON
    (6) COMPARISON -> . COMPARISON1
    (7) COMPARISON -> . COMPARISON2
    (8) COMPARISON -> . COMPARISON301
    (9) COMPARISON -> . COMPARISON302
    (10) COMPARISON -> . COMPARISON311
    (11) COMPARISON -> . COMPARISON312
    (12) COMPARISON -> . COMPARISON4
    (13) COMPARISON -> . COMPARISON41
    (14) COMPARISON -> . COMPARISON5
    (15) COMPARISON -> . COMPARISON51
    (16) COMPARISON -> . COMPARISON52
    (17) COMPARISON -> . COMPARISON6
    (18) COMPARISON -> . COMPARISON61
    (19) COMPARISON -> . COMPARISON7
    (20) COMPARISON -> . COMPARISON711
    (21) COMPARISON -> . COMPARISON8
    (22) COMPARISON -> . COMPARISON9
    (23) COMPARISON -> . COMPARISON91
    (24) COMPARISON -> . Q_COMPARISON_IS_QUAL
    (25) COMPARISON -> . Q_COMPARISON_IS_EMPTY
    (26) COMPARISON -> . Q_COMPARISON_CONTAINS_QUAL
    (31) COMPARISON1 -> . THERE IS DATA FOR MEASUREMENT
    (32) COMPARISON2 -> . NO DATA FOR MEASUREMENT
    (27) COMPARISON301 -> . COMPARISON AND COMPARISON
    (28) COMPARISON302 -> . COMPARISON OR COMPARISON
    (29) COMPARISON311 -> . LPAREN COMPARISON AND COMPARISON RPAREN
    (30) COMPARISON312 -> . LPAREN COMPARISON OR COMPARISON RPAREN
    (33) COMPARISON4 -> . MEASUREMENT2 COMP NUMUM
    (34) COMPARISON4 -> . MEASUREMENT2 COMP NUMNM
    (35) COMPARISON4 -> . MEASUREMENT2 COMP NUM
    (36) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
    (37) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
    (38) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMUM
    (39) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
    (40) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
    (41) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMNM
    (42) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUM
    (43) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUM
    (44) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUM
    (62) COMPARISON5 -> . COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
    (63) COMPARISON51 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
    (64) COMPARISON52 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
    (65) COMPARISON6 -> . NO DATA FOR ANY_OF_MEASUREMENT
    (66) COMPARISON61 -> . NO DATA FOR EVERY_OF_MEASUREMENT
    (54) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM
    (55) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM
    (56) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM
    (45) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
    (46) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
    (47) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
    (48) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
    (49) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
    (50) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
    (51) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
    (52) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
    (53) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
    (57) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
    (58) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
    (59) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUM
    (60) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (61) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (68) Q_COMPARISON_IS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_IS QUAL
    (69) Q_COMPARISON_IS_EMPTY -> . QUALIFIER_FOR_MEASUREMENT_IS EMPTY
    (67) Q_COMPARISON_CONTAINS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
    (74) MEASUREMENT2 -> . VALUE FOR MEASUREMENT IS
    (71) VALUE_FOR_ANY_OF_MEASUREMENT -> . VALUE FOR ANY_OF_MEASUREMENT IS
    (70) VALUE_FOR_EVERY_OF_MEASUREMENT -> . VALUE FOR EVERY_OF_MEASUREMENT IS
    (72) QUALIFIER_FOR_MEASUREMENT_IS -> . QUALIFIER FOR MEASUREMENT IS
    (73) QUALIFIER_FOR_MEASUREMENT_CONTAINS -> . QUALIFIER FOR MEASUREMENT CONTAINS

    THERE           shift and go to state 32
    NO              shift and go to state 33
    LPAREN          shift and go to state 34
    COMPONENT       shift and go to state 36
    VALUE           shift and go to state 37
    QUALIFIER       shift and go to state 42

    COMPARISON                     shift and go to state 10
    COMPARISON1                    shift and go to state 11
    COMPARISON2                    shift and go to state 12
    COMPARISON301                  shift and go to state 13
    COMPARISON302                  shift and go to state 14
    COMPARISON311                  shift and go to state 15
    COMPARISON312                  shift and go to state 16
    COMPARISON4                    shift and go to state 17
    COMPARISON41                   shift and go to state 18
    COMPARISON5                    shift and go to state 19
    COMPARISON51                   shift and go to state 20
    COMPARISON52                   shift and go to state 21
    COMPARISON6                    shift and go to state 22
    COMPARISON61                   shift and go to state 23
    COMPARISON7                    shift and go to state 24
    COMPARISON711                  shift and go to state 25
    COMPARISON8                    shift and go to state 26
    COMPARISON9                    shift and go to state 27
    COMPARISON91                   shift and go to state 28
    Q_COMPARISON_IS_QUAL           shift and go to state 29
    Q_COMPARISON_IS_EMPTY          shift and go to state 30
    Q_COMPARISON_CONTAINS_QUAL     shift and go to state 31
    MEASUREMENT2                   shift and go to state 35
    VALUE_FOR_ANY_OF_MEASUREMENT   shift and go to state 38
    VALUE_FOR_EVERY_OF_MEASUREMENT shift and go to state 39
    QUALIFIER_FOR_MEASUREMENT_IS   shift and go to state 40
    QUALIFIER_FOR_MEASUREMENT_CONTAINS shift and go to state 41

state 6

    (5) IF_COMPARISON2 -> IF2 . COMPARISON
    (6) COMPARISON -> . COMPARISON1
    (7) COMPARISON -> . COMPARISON2
    (8) COMPARISON -> . COMPARISON301
    (9) COMPARISON -> . COMPARISON302
    (10) COMPARISON -> . COMPARISON311
    (11) COMPARISON -> . COMPARISON312
    (12) COMPARISON -> . COMPARISON4
    (13) COMPARISON -> . COMPARISON41
    (14) COMPARISON -> . COMPARISON5
    (15) COMPARISON -> . COMPARISON51
    (16) COMPARISON -> . COMPARISON52
    (17) COMPARISON -> . COMPARISON6
    (18) COMPARISON -> . COMPARISON61
    (19) COMPARISON -> . COMPARISON7
    (20) COMPARISON -> . COMPARISON711
    (21) COMPARISON -> . COMPARISON8
    (22) COMPARISON -> . COMPARISON9
    (23) COMPARISON -> . COMPARISON91
    (24) COMPARISON -> . Q_COMPARISON_IS_QUAL
    (25) COMPARISON -> . Q_COMPARISON_IS_EMPTY
    (26) COMPARISON -> . Q_COMPARISON_CONTAINS_QUAL
    (31) COMPARISON1 -> . THERE IS DATA FOR MEASUREMENT
    (32) COMPARISON2 -> . NO DATA FOR MEASUREMENT
    (27) COMPARISON301 -> . COMPARISON AND COMPARISON
    (28) COMPARISON302 -> . COMPARISON OR COMPARISON
    (29) COMPARISON311 -> . LPAREN COMPARISON AND COMPARISON RPAREN
    (30) COMPARISON312 -> . LPAREN COMPARISON OR COMPARISON RPAREN
    (33) COMPARISON4 -> . MEASUREMENT2 COMP NUMUM
    (34) COMPARISON4 -> . MEASUREMENT2 COMP NUMNM
    (35) COMPARISON4 -> . MEASUREMENT2 COMP NUM
    (36) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMUM
    (37) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMUM
    (38) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMUM
    (39) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUMNM
    (40) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUMNM
    (41) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUMNM
    (42) COMPARISON41 -> . MEASUREMENT2 COMP NUMUM COMMA COMP NUM
    (43) COMPARISON41 -> . MEASUREMENT2 COMP NUMNM COMMA COMP NUM
    (44) COMPARISON41 -> . MEASUREMENT2 COMP NUM COMMA COMP NUM
    (62) COMPARISON5 -> . COMPONENT IS AT LEAST NUM_FOLD LESS POWERFUL IN THE MEASUREMENT
    (63) COMPARISON51 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD LESS POWERFUL THAN VALUE FOR MEASUREMENT
    (64) COMPARISON52 -> . VALUE FOR MEASUREMENT IS AT LEAST NUM_FOLD MORE POWERFUL THAN VALUE FOR MEASUREMENT
    (65) COMPARISON6 -> . NO DATA FOR ANY_OF_MEASUREMENT
    (66) COMPARISON61 -> . NO DATA FOR EVERY_OF_MEASUREMENT
    (54) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM
    (55) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM
    (56) COMPARISON7 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM
    (45) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMUM
    (46) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUMNM
    (47) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMNM COMMA COMP NUM
    (48) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMUM
    (49) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUMNM
    (50) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUM COMMA COMP NUM
    (51) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMUM
    (52) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUMNM
    (53) COMPARISON711 -> . VALUE_FOR_ANY_OF_MEASUREMENT COMP NUMUM COMMA COMP NUM
    (57) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMUM
    (58) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUMNM
    (59) COMPARISON8 -> . VALUE_FOR_EVERY_OF_MEASUREMENT COMP NUM
    (60) COMPARISON9 -> . THERE IS LESS THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (61) COMPARISON91 -> . THERE IS MORE THAN NUM FOLD DIFFERENCE BETWEEN VALUE IN MEASUREMENT AND VALUE IN MEASUREMENT
    (68) Q_COMPARISON_IS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_IS QUAL
    (69) Q_COMPARISON_IS_EMPTY -> . QUALIFIER_FOR_MEASUREMENT_IS EMPTY
    (67) Q_COMPARISON_CONTAINS_QUAL -> . QUALIFIER_FOR_MEASUREMENT_CONTAINS QUAL
    (74) MEASUREMENT2 -> . VALUE FOR MEASUREMENT IS
    (71) VALUE_FOR_ANY_OF_MEASUREMENT -> . VALUE FOR ANY_OF_MEASUREMENT IS
    (70) VALUE_FOR_EVERY_OF_MEASUREMENT -> . VALUE FOR EVERY_OF_MEASUREMENT IS
    (72) QUALIFIER_FOR_MEASUREMENT_IS -> . QUALIFIER FOR MEASUREMENT IS
    (73) QUALIFIER_FOR_MEASUREMENT_CONTAINS -> . QUALIFIER FOR MEASUREMENT CONTAINS

    THERE           shift and go to state 32
    NO              shift and go to state 33
    LPAREN          shift and go to state 34
    COMPONENT       shift and go to state 36
    VALUE           shift and go to state 37
    QUALIFIER       shift and go to state 42

    COMPARISON                     shift and go to state 43
    COMPARISON1                    shift and go to state 11
    COMPARISON2                    shift and go to state 12
    COMPARISON301                  shift and go to state 13
    COMPARISON302                  shift and go to state 14
    COMPARISON311                  shift and go to state 15
    COMPARISON312                  shift and go to state 16
    COMPARISON4                    shift and go to state 17
    COMPARISON41                   shift and go to state 18
    COMPARISON5                    shift and go to state 19
    COMPARISON51                   shift and go to state 20
    COMPARISON52                   shift and go to state 21
    COMPARISON6                    shift and go to state 22
    COMPARISON61                   shift and go to state 23
    COMPARISON7                    shift and go to state 24
    COMPARISON711                  shift and go to state 25
    COMPARISON8                    shift and go to state 26
    COMPARISON9                    shift and go to state 27
    COMPARISON91                   shift and go to state 28
    Q_COMPARISON_IS_QUAL           shift and go to state 29
    Q_COMPARISON_IS_EMPTY          shift and go to state 30
    Q_COMPARISON_CONTAINS_QUAL     shift and go to state 31
    MEASUREMENT2                   shift and go to state 35
    VALUE_FOR_ANY_OF_MEASUREMENT   shift and go to state 38
    VALUE_FOR_EVERY_OF_MEASUREMENT shift and go to state 39
    QUALIFIER_FOR_MEASUREMENT_IS   shift and go to state 40
    QUALIFIER_FOR_MEASUREMENT_CONTAINS shift and go to state 41

state 7

    (1) COMPLETE_IF_THEN2 -> COMPLETE_IF_THEN OTHERWISE . PRINT_VAL
    (79) IF2 -> COMPLETE_IF_THEN OTHERWISE . IF

    PRINT_VAL       shift and go to state 44
    IF              shift and go to state 45


state 8

    (2) COMPLETE_IF_THEN -> IF_COMPARISON THEN . PRINT_VAL

    PRINT_VAL       shift and go to state 46


state 9

    (3) COMPLETE_IF_THEN -> IF_COMPARISON2 THEN . PRINT_VAL

    PRINT_VAL       shift and go to state 47


state 10

    (4) IF_COMPARISON -> IF COMPARISON .
    (27) COMPARISON301 -> COMPARISON . AND COMPARISON
    (28) COMPARISON302 -> COMPARISON . OR COMPARISON

    THEN            reduce using rule 4 (IF_COMPARISON -> IF COMPARISON .)
    AND             shift and go to state 48
    OR              shift and go to state 49


state 11

    (6) COMPARISON -> COMPARISON1 .

    AND             reduce using rule 6 (COMPARISON -> COMPARISON1 .)
    OR              reduce using rule 6 (COMPARISON -> COMPARISON1 .)
    THEN            reduce using rule 6 (COMPARISON -> COMPARISON1 .)
    RPAREN          reduce using rule 6 (COMPARISON -> COMPARISON1 .)


state 12

    (7) COMPARISON -> COMPARISON2 .

    AND             reduce using rule 7 (COMPARISON -> COMPARISON2 .)
    OR              reduce using rule 7 (COMPARISON -> COMPARISON2 .)
    THEN            reduce using rule 7 (COMPARISON -> COMPARISON2 .)
    RPAREN          reduce using rule 7 (COMPARISON -> COMPARISON2 .)


state 13

    (8) COMPARISON -> COMPARISON301 .

    AND             reduce using rule 8 (COMPARISON -> COMPARISON301 .)
    OR              reduce using rule 8 (COMPARISON -> COMPARISON301 .)
    THEN            reduce using rule 8 (COMPARISON -> COMPARISON301 .)
    RPAREN          reduce using rule 8 (COMPARISON -> COMPARISON301 .)


state 14

    (9) COMPARISON -> COMPARISON302 .

    AND             reduce using rule 9 (COMPARISON -> COMPARISON302 .)
    OR              reduce using rule 9 (COMPARISON -> COMPARISON302 .)
    THEN            reduce using rule 9 (COMPARISON -> COMPARISON302 .)
    RPAREN          reduce using rule 9 (COMPARISON -> COMPARISON302 .)


state 15

    (10) COMPARISON -> COMPARISON311 .

    AND             reduce using rule 10 (COMPARISON -> COMPARISON311 .)
    OR              reduce using rule 10 (COMPARISON -> COMPARISON311 .)
    THEN            reduce using rule 10 (COMPARISON -> COMPARISON311 .)
    RPAREN          reduce using rule 10 (COMPARISON -> COMPARISON311 .)


state 16

    (11) COMPARISON -> COMPARISON312 .

    AND             reduce using rule 11 (COMPARISON -> COMPARISON312 .)
    OR              reduce using rule 11 (COMPARISON -> COMPARISON312 .)
    THEN            reduce using rule 11 (COMPARISON -> COMPARISON312 .)
    RPAREN          reduce using rule 11 (COMPARISON -> COMPARISON312 .)


state 17

    (12) COMPARISON -> COMPARISON4 .

    AND             reduce using rule 12 (COMPARISON -> COMPARISON4 .)
    OR              reduce using rule 12 (COMPARISON -> COMPARISON4 .)
    THEN            reduce using rule 12 (COMPARISON -> COMPARISON4 .)
    RPAREN          reduce using rule 12 (COMPARISON -> COMPARISON4 .)


state 18

    (13) COMPARISON -> COMPARISON41 .

    AND             reduce using rule 13 (COMPARISON -> COMPARISON41 .)
    OR              reduce using rule 13 (COMPARISON -> COMPARISON41 .)
    THEN            reduce using rule 13 (COMPARISON -> COMPARISON41 .)
    RPAREN          reduce using rule 13 (COMPARISON -> COMPARISON41 .)


state 19

    (14) COMPARISON -> COMPARISON5 .
